# ricerco-utils

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  index.js  package-lock.json  package.json  test.js
.github/workflows/: main.yml
default/: project_default.json
include/: rus_config.hpp
include/Node/: Ricerco.hpp  WindowsUtils.hpp
include/Project/: Project.hpp
include/Structure/: ProjectStructure.hpp  Structure.hpp
source/: filemanager.cc
src/: Project.h  Structure.hpp  filemanager.cc  rus_config.cc  rus_config.hpp
src/Node/: Entry.cc  Ricerco.cc  WindowsUtils.cc
src/Project/: Project.cc
src/Structure/: ProjectStructure.cc  Structure.cc
test/: test.js
tools/boost/: 141-build.msvc.bat  README.md  download.ps1  latest-build.msvc.bat
